--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,5 +97,7 @@ dependencies {
     //ThreeTen
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
 
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 }
